fix flex-list left action drop down menu and button clipping

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -479,11 +479,14 @@ table.dataTable {
           padding-right: 0;
           width: 50px;
           height: 26px;
-          z-index: 1;
+          z-index: 11;
           background: @white;
           position: absolute;
           left: 0;
           border-right: 0;
+          span {
+            overflow-x: visible;
+          }
         }
         &:nth-child(2) {
           padding-left: 75px;
